--- a/gui/test.ui
+++ b/gui/test.ui
@@ -166,6 +166,9 @@ background-color: rgb(255, 0, 0);
      <height>350</height>
     </rect>
    </property>
+   <property name="currentIndex">
+    <number>0</number>
+   </property>
    <widget class="QWidget" name="page">
     <widget class="QLineEdit" name="paraLine">
      <property name="geometry">
@@ -404,33 +407,6 @@ font: 20pt &quot;宋体&quot;;
       <string>检测信息</string>
      </property>
     </widget>
-    <widget class="QComboBox" name="genderCb">
-     <property name="geometry">
-      <rect>
-       <x>516</x>
-       <y>189</y>
-       <width>230</width>
-       <height>40</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">QComboBox::drop-down{
-width:56px;  height:56px;
-}
-
-QComboBox{
-font: 20pt &quot;宋体&quot;;
-color: rgb(255, 255, 255);
-background-color: rgb(0, 0, 0);
-}
-
-QComboBox QAbstractItemView {
-	background-color: rgb(0, 0, 0);/*背景颜色*/
-    padding: 1px 2px 1px 2px;  /*针对于组合框中的文本内容*/
-	color: rgb(255,255,255)
-}</string>
-     </property>
-    </widget>
     <widget class="QPushButton" name="pushButton">
      <property name="enabled">
       <bool>false</bool>
@@ -644,6 +620,38 @@ color: rgb(255,255,255);
       <string/>
      </property>
     </widget>
+    <widget class="QRadioButton" name="radioButton">
+     <property name="geometry">
+      <rect>
+       <x>530</x>
+       <y>190</y>
+       <width>95</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">font: 20pt &quot;宋体&quot;;</string>
+     </property>
+     <property name="text">
+      <string>男</string>
+     </property>
+    </widget>
+    <widget class="QRadioButton" name="radioButton_2">
+     <property name="geometry">
+      <rect>
+       <x>650</x>
+       <y>190</y>
+       <width>95</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">font: 20pt &quot;宋体&quot;;</string>
+     </property>
+     <property name="text">
+      <string>女</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QWidget" name="page_2">
     <widget class="QTableView" name="exeTable">
@@ -690,7 +698,7 @@ QComboBox QAbstractItemView {
       <string notr="true">font: 20pt &quot;宋体&quot;;</string>
      </property>
      <property name="text">
-      <string>照片生成中。。。</string>
+      <string/>
      </property>
     </widget>
     <widget class="QLabel" name="label_16">
