--- a/gui/clear.ui
+++ b/gui/clear.ui
@@ -44,7 +44,7 @@
      <string notr="true">font: 20pt &quot;宋体&quot;;</string>
     </property>
     <property name="text">
-     <string>历史记录</string>
+     <string>保留天数</string>
     </property>
    </widget>
    <widget class="QProgressBar" name="clearBar">
