--- a/gui/edit.ui
+++ b/gui/edit.ui
@@ -28,6 +28,9 @@
    <property name="styleSheet">
     <string notr="true"/>
    </property>
+   <property name="currentIndex">
+    <number>1</number>
+   </property>
    <widget class="QWidget" name="page">
     <widget class="QLabel" name="delete_icon_label">
      <property name="geometry">
@@ -211,22 +214,6 @@ border-radius: 35px;
       <string>添加试剂卡</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_4">
-     <property name="geometry">
-      <rect>
-       <x>190</x>
-       <y>190</y>
-       <width>151</width>
-       <height>44</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">font: 20pt &quot;宋体&quot;;</string>
-     </property>
-     <property name="text">
-      <string>列</string>
-     </property>
-    </widget>
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
@@ -240,7 +227,7 @@ border-radius: 35px;
       <string notr="true">font: 20pt &quot;宋体&quot;;</string>
      </property>
      <property name="text">
-      <string>行</string>
+      <string>规格</string>
      </property>
     </widget>
     <widget class="QLineEdit" name="nameLine">
@@ -262,33 +249,6 @@ border-radius: 35px;
       <string notr="true">font: 20pt &quot;宋体&quot;;
 color: rgb(255, 255, 255);
 background-color: rgb(0, 0, 0);</string>
-     </property>
-    </widget>
-    <widget class="QComboBox" name="colCb">
-     <property name="geometry">
-      <rect>
-       <x>390</x>
-       <y>190</y>
-       <width>230</width>
-       <height>70</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">QComboBox::drop-down{
-width:56px;  height:56px;
-}
-
-QComboBox{
-font: 20pt &quot;宋体&quot;;
-color: rgb(255, 255, 255);
-background-color: rgb(0, 0, 0);
-}
-
-QComboBox QAbstractItemView {
-	background-color: rgb(0, 0, 0);/*背景颜色*/
-    padding: 1px 2px 1px 2px;  /*针对于组合框中的文本内容*/
-	color: rgb(255,255,255)
-}</string>
      </property>
     </widget>
     <widget class="QComboBox" name="rowCb">
