--- a/gui/history.ui
+++ b/gui/history.ui
@@ -115,12 +115,12 @@ QCalendarWidget QSpinBox::down-arrow
      </property>
      <property name="dateTime">
       <datetime>
-       <hour>0</hour>
+       <hour>16</hour>
        <minute>0</minute>
        <second>0</second>
        <year>2019</year>
        <month>12</month>
-       <day>27</day>
+       <day>26</day>
       </datetime>
      </property>
     </widget>
@@ -413,9 +413,9 @@ background-color: rgb(255, 0, 0);
    <widget class="QPushButton" name="btnReport">
     <property name="geometry">
      <rect>
-      <x>275</x>
+      <x>404</x>
       <y>10</y>
-      <width>254</width>
+      <width>187</width>
       <height>80</height>
      </rect>
     </property>
@@ -438,9 +438,9 @@ background-color: rgb(255, 0, 0);
    <widget class="QPushButton" name="btnPrint">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>207</x>
       <y>10</y>
-      <width>254</width>
+      <width>187</width>
       <height>80</height>
      </rect>
     </property>
@@ -458,6 +458,31 @@ background-color: rgb(255, 0, 0);
     </property>
     <property name="text">
      <string>打印</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnDownload">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>187</width>
+      <height>80</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {
+font: 20pt &quot;宋体&quot;;
+border:4px solid rgb(0,0,0);
+background-color:#05abc2;
+}
+
+QPushButton:pressed{
+background-color: rgb(255, 0, 0);
+}
+</string>
+    </property>
+    <property name="text">
+     <string>下载</string>
     </property>
    </widget>
   </widget>
