--- a/gui/history.ui
+++ b/gui/history.ui
@@ -45,8 +45,8 @@
     <widget class="QDateEdit" name="dateBox">
      <property name="geometry">
       <rect>
-       <x>340</x>
-       <y>70</y>
+       <x>190</x>
+       <y>80</y>
        <width>230</width>
        <height>70</height>
       </rect>
@@ -115,7 +115,7 @@ QCalendarWidget QSpinBox::down-arrow
      </property>
      <property name="dateTime">
       <datetime>
-       <hour>16</hour>
+       <hour>8</hour>
        <minute>0</minute>
        <second>0</second>
        <year>2019</year>
@@ -127,8 +127,8 @@ QCalendarWidget QSpinBox::down-arrow
     <widget class="QLabel" name="label_2">
      <property name="geometry">
       <rect>
-       <x>160</x>
-       <y>70</y>
+       <x>20</x>
+       <y>80</y>
        <width>136</width>
        <height>67</height>
       </rect>
@@ -143,13 +143,13 @@ QCalendarWidget QSpinBox::down-arrow
       <string notr="true">font: 20pt &quot;宋体&quot;;</string>
      </property>
      <property name="text">
-      <string>时间</string>
+      <string>时间*</string>
      </property>
     </widget>
     <widget class="QComboBox" name="modeBox_3">
      <property name="geometry">
       <rect>
-       <x>340</x>
+       <x>190</x>
        <y>210</y>
        <width>230</width>
        <height>70</height>
@@ -182,9 +182,9 @@ QComboBox QAbstractItemView {
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>120</x>
+       <x>20</x>
        <y>210</y>
-       <width>171</width>
+       <width>161</width>
        <height>67</height>
       </rect>
      </property>
@@ -198,7 +198,69 @@ QComboBox QAbstractItemView {
       <string notr="true">font: 20pt &quot;宋体&quot;;</string>
      </property>
      <property name="text">
-      <string>试剂卡型号</string>
+      <string>试剂卡型号*</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_4">
+     <property name="geometry">
+      <rect>
+       <x>440</x>
+       <y>80</y>
+       <width>111</width>
+       <height>67</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">font: 20pt &quot;宋体&quot;;</string>
+     </property>
+     <property name="text">
+      <string>病人编号</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_5">
+     <property name="geometry">
+      <rect>
+       <x>440</x>
+       <y>210</y>
+       <width>141</width>
+       <height>67</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">font: 20pt &quot;宋体&quot;;</string>
+     </property>
+     <property name="text">
+      <string>试剂卡编号</string>
+     </property>
+    </widget>
+    <widget class="QTextEdit" name="textEdit">
+     <property name="geometry">
+      <rect>
+       <x>580</x>
+       <y>80</y>
+       <width>200</width>
+       <height>70</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">font: 20pt &quot;宋体&quot;;
+color: rgb(255, 255, 255);
+background-color: rgb(0, 0, 0);</string>
+     </property>
+    </widget>
+    <widget class="QTextEdit" name="textEdit_2">
+     <property name="geometry">
+      <rect>
+       <x>580</x>
+       <y>210</y>
+       <width>200</width>
+       <height>70</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">font: 20pt &quot;宋体&quot;;
+color: rgb(255, 255, 255);
+background-color: rgb(0, 0, 0);</string>
      </property>
     </widget>
    </widget>
