--- a/gui/home.ui
+++ b/gui/home.ui
@@ -31,7 +31,7 @@
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
    </property>
-   <widget class="QLabel" name="label_2">
+   <widget class="QLabel" name="history_icon_label">
     <property name="geometry">
      <rect>
       <x>410</x>
@@ -78,7 +78,7 @@ background-color: rgb(255, 0, 0);
      <string>  荧光检疫</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_4">
+   <widget class="QLabel" name="sys_icon_label">
     <property name="geometry">
      <rect>
       <x>410</x>
@@ -99,7 +99,7 @@ border-radius: 35px;
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="reagent_icon_label">
     <property name="geometry">
      <rect>
       <x>100</x>
@@ -171,7 +171,7 @@ background-color: rgb(255, 0, 0);
      <string>电源</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_3">
+   <widget class="QLabel" name="reagent_set_icon_label">
     <property name="geometry">
      <rect>
       <x>100</x>
@@ -245,14 +245,14 @@ background-color: rgb(255, 0, 0);
     </property>
    </widget>
    <zorder>btnData</zorder>
-   <zorder>label</zorder>
+   <zorder>reagent_icon_label</zorder>
    <zorder>btnSet</zorder>
    <zorder>btnPower</zorder>
-   <zorder>label_3</zorder>
+   <zorder>reagent_set_icon_label</zorder>
    <zorder>btnHistory</zorder>
    <zorder>btnPara</zorder>
-   <zorder>label_4</zorder>
-   <zorder>label_2</zorder>
+   <zorder>sys_icon_label</zorder>
+   <zorder>history_icon_label</zorder>
   </widget>
  </widget>
  <resources/>
