--- a/gui/power.ui
+++ b/gui/power.ui
@@ -111,7 +111,7 @@ background-color: rgb(255, 0, 0);
      <string>注销</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="shutdown_icon_label">
     <property name="geometry">
      <rect>
       <x>90</x>
@@ -132,7 +132,7 @@ border-radius: 35px;
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
+   <widget class="QLabel" name="logout_icon_label">
     <property name="geometry">
      <rect>
       <x>440</x>
