--- a/gui/sys.ui
+++ b/gui/sys.ui
@@ -112,7 +112,7 @@ background-color: rgb(255, 0, 0);
 </string>
     </property>
     <property name="text">
-     <string>     图像参数设置</string>
+     <string>   设备设置</string>
     </property>
    </widget>
    <widget class="QPushButton" name="btnClear">
