modify 1109 add icon

--- a/gui/test.ui
+++ b/gui/test.ui
@@ -167,7 +167,7 @@ background-color: rgb(255, 0, 0);
     </rect>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="page">
     <widget class="QLineEdit" name="paraLine">
@@ -672,8 +672,9 @@ background-color:rgb(255,255,255);
 
 QComboBox {
     font: 20pt &quot;宋体&quot;;
-	color: rgb(0, 0, 255);
-	background-color: rgb(0,0,0)
+	color: rgb(255, 255, 255);
+	background-color: rgb(0,0,0);
+	align: center;
 }
 
 QComboBox QAbstractItemView {
