--- a/gui/edit.ui
+++ b/gui/edit.ui
@@ -29,7 +29,7 @@
     <string notr="true"/>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>4</number>
    </property>
    <widget class="QWidget" name="page">
     <widget class="QLabel" name="delete_icon_label">
@@ -451,6 +451,7 @@ QComboBox {
    font: 20pt &quot;宋体&quot;;
 	color: rgb(255, 255, 255);
 	background-color: rgb(0, 0, 0);
+	align: center;
 }
 
 QComboBox QAbstractItemView {
