--- a/gui/test.ui
+++ b/gui/test.ui
@@ -109,9 +109,9 @@ background-color: rgb(255, 0, 0);
    <widget class="QPushButton" name="btnSwitch">
     <property name="geometry">
      <rect>
-      <x>275</x>
+      <x>404</x>
       <y>10</y>
-      <width>254</width>
+      <width>187</width>
       <height>80</height>
      </rect>
     </property>
@@ -134,9 +134,9 @@ background-color: rgb(255, 0, 0);
    <widget class="QPushButton" name="btnPrint">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>207</x>
       <y>10</y>
-      <width>254</width>
+      <width>187</width>
       <height>80</height>
      </rect>
     </property>
@@ -154,6 +154,31 @@ background-color: rgb(255, 0, 0);
     </property>
     <property name="text">
      <string>打印</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnDownload">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>187</width>
+      <height>80</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {
+font: 20pt &quot;宋体&quot;;
+border:4px solid rgb(0,0,0);
+background-color:#05abc2;
+}
+
+QPushButton:pressed{
+background-color: rgb(255, 0, 0);
+}
+</string>
+    </property>
+    <property name="text">
+     <string>下载</string>
     </property>
    </widget>
   </widget>
