--- a/gui/info.ui
+++ b/gui/info.ui
@@ -212,7 +212,7 @@ background-color: rgb(255, 0, 0);
     <widget class="QLabel" name="photoLabel">
      <property name="geometry">
       <rect>
-       <x>230</x>
+       <x>440</x>
        <y>0</y>
        <width>350</width>
        <height>350</height>
@@ -237,15 +237,96 @@ background-color: rgb(255, 0, 0);
       </size>
      </property>
      <property name="styleSheet">
-      <string notr="true">font: 20pt &quot;幼圆&quot;;</string>
+      <string notr="true">font: 20pt &quot;宋体&quot;;</string>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>test_photo</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
      </property>
     </widget>
+    <widget class="QLabel" name="picLabel">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>0</y>
+       <width>350</width>
+       <height>350</height>
+      </rect>
+     </property>
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>350</width>
+       <height>350</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>350</width>
+       <height>350</height>
+      </size>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">font: 20pt &quot;宋体&quot;;</string>
+     </property>
+     <property name="text">
+      <string>origin_photo</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="leftLabel">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>0</y>
+       <width>350</width>
+       <height>30</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QLabel {
+font: 20pt &quot;宋体&quot;;
+color: rgb(255, 0, 0);
+background-color: transparent;
+}</string>
+     </property>
+     <property name="text">
+      <string>TextLabel</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="rightLabel">
+     <property name="geometry">
+      <rect>
+       <x>440</x>
+       <y>0</y>
+       <width>350</width>
+       <height>30</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QLabel {
+font: 20pt &quot;宋体&quot;;
+color: rgb(255, 0, 0);
+background-color: transparent;
+}</string>
+     </property>
+     <property name="text">
+      <string>TextLabel</string>
+     </property>
+    </widget>
+    <zorder>photoLabel</zorder>
+    <zorder>picLabel</zorder>
+    <zorder>rightLabel</zorder>
+    <zorder>leftLabel</zorder>
    </widget>
    <widget class="QWidget" name="page_2">
     <widget class="QTableView" name="tableView">
