--- a/gui/about.ui
+++ b/gui/about.ui
@@ -44,7 +44,7 @@
      <string notr="true">font: 20pt &quot;宋体&quot;;</string>
     </property>
     <property name="text">
-     <string>荧光判读仪 C10-1001</string>
+     <string>荧光判读仪 CIO-1001</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_35">
