--- a/gui/info.ui
+++ b/gui/info.ui
@@ -20,9 +20,9 @@
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>350</y>
+     <y>370</y>
      <width>800</width>
-     <height>100</height>
+     <height>80</height>
     </rect>
    </property>
    <property name="frameShape">
@@ -205,7 +205,7 @@ background-color: rgb(255, 0, 0);
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>350</height>
+     <height>370</height>
     </rect>
    </property>
    <widget class="QWidget" name="page">
@@ -365,9 +365,9 @@ QComboBox QAbstractItemView {
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>10</y>
+       <y>0</y>
        <width>771</width>
-       <height>341</height>
+       <height>370</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -382,6 +382,36 @@ border:2px solid rgb(0,0,0);
 background-color:rgb(255,255,255);
 }
 </string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="page_4">
+    <widget class="QTableView" name="tableView_2">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>0</y>
+       <width>778</width>
+       <height>370</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">#tableView_2{
+	font: 20pt &quot;宋体&quot;;
+border:4px solid rgb(0,0,0);
+background-color:rgb(255,255,255);
+}
+
+QComboBox {
+    font: 20pt &quot;宋体&quot;;
+	color: rgb(255, 255, 255);
+	background-color: rgb(0,0,0);
+}
+
+QComboBox QAbstractItemView {
+	background-color: rgb(0, 0, 0);/*背景颜色*/
+	color: rgb(255,255,255)
+}</string>
      </property>
     </widget>
    </widget>
