--- a/gui/wifi.ui
+++ b/gui/wifi.ui
@@ -35,7 +35,7 @@
     <property name="geometry">
      <rect>
       <x>390</x>
-      <y>110</y>
+      <y>70</y>
       <width>230</width>
       <height>70</height>
      </rect>
@@ -68,7 +68,7 @@ QComboBox QAbstractItemView {
     <property name="geometry">
      <rect>
       <x>160</x>
-      <y>110</y>
+      <y>70</y>
       <width>161</width>
       <height>73</height>
      </rect>
@@ -84,7 +84,7 @@ QComboBox QAbstractItemView {
     <property name="geometry">
      <rect>
       <x>160</x>
-      <y>210</y>
+      <y>170</y>
       <width>151</width>
       <height>73</height>
      </rect>
@@ -100,7 +100,7 @@ QComboBox QAbstractItemView {
     <property name="geometry">
      <rect>
       <x>390</x>
-      <y>210</y>
+      <y>170</y>
       <width>230</width>
       <height>70</height>
      </rect>
@@ -204,6 +204,38 @@ background-color: rgb(255, 0, 0);
     </property>
     <property name="text">
      <string>返回</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>270</y>
+      <width>150</width>
+      <height>70</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 20pt &quot;宋体&quot;;</string>
+    </property>
+    <property name="text">
+     <string>本机IP</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="addr_Label">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>270</y>
+      <width>230</width>
+      <height>70</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 20pt &quot;宋体&quot;;</string>
+    </property>
+    <property name="text">
+     <string>127.0.0.1</string>
     </property>
    </widget>
   </widget>
