0111修改测试界面显示

--- a/gui/home.ui
+++ b/gui/home.ui
@@ -75,7 +75,7 @@ background-color: rgb(255, 0, 0);
 </string>
     </property>
     <property name="text">
-     <string>  荧光检疫</string>
+     <string>  荧光检测</string>
     </property>
    </widget>
    <widget class="QLabel" name="sys_icon_label">
