--- a/gui/test.ui
+++ b/gui/test.ui
@@ -392,10 +392,11 @@ color: rgb(255,255,255);
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">font: 20pt &quot;宋体&quot;;</string>
+      <string notr="true">font: 20pt &quot;宋体&quot;;
+</string>
      </property>
      <property name="text">
-      <string>试剂卡规格</string>
+      <string>规格</string>
      </property>
     </widget>
     <widget class="QPushButton" name="pushButton_3">
@@ -544,7 +545,7 @@ QComboBox QAbstractItemView {
 </string>
      </property>
      <property name="text">
-      <string>试剂卡型号</string>
+      <string>检测组合</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_2">
@@ -682,7 +683,7 @@ color: rgb(255,255,255);
     <widget class="QTableView" name="exeTable">
      <property name="geometry">
       <rect>
-       <x>10</x>
+       <x>15</x>
        <y>0</y>
        <width>771</width>
        <height>350</height>
@@ -821,7 +822,37 @@ QComboBox QAbstractItemView {
     <zorder>rightLabel</zorder>
     <zorder>leftLabel</zorder>
    </widget>
-   <widget class="QWidget" name="page_4"/>
+   <widget class="QWidget" name="page_4">
+    <widget class="QTableView" name="tableView">
+     <property name="geometry">
+      <rect>
+       <x>15</x>
+       <y>0</y>
+       <width>771</width>
+       <height>350</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QTableView {
+	font: 20pt &quot;宋体&quot;;
+border:4px solid rgb(0,0,0);
+background-color:rgb(255,255,255);
+}
+
+QComboBox {
+    font: 20pt &quot;宋体&quot;;
+	color: rgb(255, 255, 255);
+	background-color: rgb(0,0,0);
+}
+
+QComboBox QAbstractItemView {
+	background-color: rgb(0, 0, 0);/*背景颜色*/
+    padding: 1px 2px 1px 2px;  /*针对于组合框中的文本内容*/
+	color: rgb(255,255,255)
+}</string>
+     </property>
+    </widget>
+   </widget>
   </widget>
  </widget>
  <resources/>
